--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/lookwell
-jdbc.user=root
-jdbc.password=1234
+jdbc.username=root
+jdbc.password=admin
